fix navbar no wrap

--- a/src/components/navbar/style.scss
+++ b/src/components/navbar/style.scss
@@ -15,6 +15,7 @@
       .nav-link {
         --bs-nav-link-color: #ffffff;
         --bs-navbar-nav-link-padding-x: 1.75rem;
+        white-space: nowrap;
       }
     }
   }
